# ChangeLog for dev-games/snesreader
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> snesreader-0.009.ebuild,
  snesreader-0.010.ebuild, snesreader-0.011.ebuild:
  Remove redundant static version.

*snesreader-0.011 (07 Jan 2010)

  07 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +snesreader-0.011.ebuild:
  Bumped.

  02 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> -snesreader-0.006.ebuild,
  -snesreader-0.008.ebuild:
  Removed cruft.

  26 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> snesreader-0.006.ebuild,
  snesreader-0.008.ebuild, snesreader-0.009.ebuild, snesreader-0.010.ebuild:
  Fixed whitespace.

  09 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> +snesreader-0.010.ebuild:
  Bumped.

  23 Nov 2009; Michał Ziąbkowski <mziab@o2.pl> +snesreader-0.009.ebuild:
  Bumped.

  04 Nov 2009; Michał Ziąbkowski <mziab@o2.pl> +snesreader-0.008.ebuild:
  Bumped.

  18 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> +snesreader-0.006.ebuild,
  -snesreader-1.03.ebuild:
  Bumped. Removed older version to avoid ABI and versioning problems.
  Moreover, this version requires Qt4.

  03 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> -snesreader-1.02.ebuild,
  snesreader-1.03.ebuild:
  Removed cruft. Fixed CFLAGS.

  29 Sep 2009; Michał Ziąbkowski <mziab@o2.pl> snesreader-1.02.ebuild,
  +snesreader-1.03.ebuild:
  Bumped. Removed some left-overs.

  28 Sep 2009; Michał Ziąbkowski <mziab@o2.pl> +snesreader-1.02.ebuild:
  Initial ebuild.
