@@ -1,8 +1,8 @@
 DIST snesreader_v009.tar.bz2 460024 RMD160 c274ef213008f02f28ceb9cc312e18ed314d4be9 SHA1 67dc68b3c0fd588378caa5ac010d878023c3b190 SHA256 120625db61fae9649fb477e83c37605458e0b8a50f73d3082b2876be9fbacae5
 DIST snesreader_v010.tar.bz2 208397 RMD160 d85f74c3cc7beda60ad9d8aa1f90d3dd9f978273 SHA1 df500e6015ca357c1bec25025cc25cc02f2a888f SHA256 7aa31584487e00e376b49df069694f4f542260c94bf0f4179806c50ab1a8bb11
 DIST snesreader_v011.tar.bz2 208780 RMD160 ab6f69f3f85d5049a09d602bdce31df836ee3376 SHA1 d8972ad3250c1962f30ceaf177fc580545a0b016 SHA256 a9f49011400fb8eaa4816443d6158a066d2e737fc97b16e01316b2e238ccf144
-EBUILD snesreader-0.009.ebuild 715 RMD160 b48eb68c407c9d6daf68c9ac58445b6b3ca95224 SHA1 cd63ec8c483a741e3495ab66fd744c3f0b4d3d44 SHA256 ea8909099c2e34e9abd5446f4f81378984475fc832bf74991de88136d6766f4b
-EBUILD snesreader-0.010.ebuild 715 RMD160 b48eb68c407c9d6daf68c9ac58445b6b3ca95224 SHA1 cd63ec8c483a741e3495ab66fd744c3f0b4d3d44 SHA256 ea8909099c2e34e9abd5446f4f81378984475fc832bf74991de88136d6766f4b
-EBUILD snesreader-0.011.ebuild 715 RMD160 b48eb68c407c9d6daf68c9ac58445b6b3ca95224 SHA1 cd63ec8c483a741e3495ab66fd744c3f0b4d3d44 SHA256 ea8909099c2e34e9abd5446f4f81378984475fc832bf74991de88136d6766f4b
-MISC ChangeLog 1526 RMD160 b7a55aaece3fa1917f2f75d54b4815472b968aa1 SHA1 84c4ae182ec5a24b011e31e38f27557c32e6066b SHA256 8c0482bd0abb052bda31189f5a68015011610560d34b0eea80eca037b2e34bbf
+EBUILD snesreader-0.009.ebuild 723 RMD160 9beee14543440f27dd72dc946fc811e1f8375691 SHA1 4f0f94391e24a8e37e55e063cdedac48575bca3d SHA256 8ffcb366bc3ffad8ca02571d74de87bd2c4f26c7b2e4f0cff373cf557f4e2f17
+EBUILD snesreader-0.010.ebuild 723 RMD160 9beee14543440f27dd72dc946fc811e1f8375691 SHA1 4f0f94391e24a8e37e55e063cdedac48575bca3d SHA256 8ffcb366bc3ffad8ca02571d74de87bd2c4f26c7b2e4f0cff373cf557f4e2f17
+EBUILD snesreader-0.011.ebuild 723 RMD160 9beee14543440f27dd72dc946fc811e1f8375691 SHA1 4f0f94391e24a8e37e55e063cdedac48575bca3d SHA256 8ffcb366bc3ffad8ca02571d74de87bd2c4f26c7b2e4f0cff373cf557f4e2f17
+MISC ChangeLog 1685 RMD160 524313d0281542fa57db60fc49df760848228cbf SHA1 42a84ec1d4b0e93916ee0c0ecfbbd0a69565b3e0 SHA256 c8b5474b21f5cf49224f4a4d8b93970bdb769d07ff150e361440b2c8b8ac7ac2
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
