@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> snesreader-0.009.ebuild,
+  snesreader-0.010.ebuild, snesreader-0.011.ebuild:
+  Fixed stripping. Style fixes.
+
   07 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> snesreader-0.009.ebuild,
   snesreader-0.010.ebuild, snesreader-0.011.ebuild:
   Remove redundant static version.
